# ambicam

./: .gitignore  README.md  ambibridge.service  ambicam.service  app.py  bridge.py  config.json  config.json.sample  kill.sh  main.py  pyproject.toml  utils.py
Adalight_Fastled_ws2812b/: Adalight_Fastled_ws2812b.ino
arduino_server/: arduino_server.ino
misc/: misc.py
modules/: camera.py  colorgrabber.py  servers.py  telnet.py  test.py  test2.py  utils.py
templates/: index.html  preview.html  remote.html
